[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Dealer.gd" type="Script" id=1]
[ext_resource path="res://Assets/campo-desenhado.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/heroi-13.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/gutter/Gutter Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Bag.gd" type="Script" id=6]
[ext_resource path="res://Scenes/sellCard.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 100.0

[node name="InGame" type="Node2D"]
script = ExtResource( 1 )

[node name="campo-desenhado" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="Draw" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 50, 450 )
scale = Vector2( 0.520007, 0.520007 )
normal = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 30.0
margin_top = 1570.0
margin_right = 1057.0
margin_bottom = 1971.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mesa vazia"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckLabel" type="Label" parent="."]
margin_left = 470.0
margin_top = 60.0
margin_right = 610.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "40"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SellLabel" type="Label" parent="."]
margin_left = 816.0
margin_top = 343.0
margin_right = 1018.0
margin_bottom = 433.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sell"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table" type="Node2D" parent="."]

[node name="slot1" type="Position2D" parent="table"]
position = Vector2( 170, 1060 )

[node name="slot2" type="Position2D" parent="table"]
position = Vector2( 420, 1060 )

[node name="slot3" type="Position2D" parent="table"]
position = Vector2( 660, 1060 )

[node name="slot4" type="Position2D" parent="table"]
position = Vector2( 910, 1060 )

[node name="rightHand" type="Area2D" parent="." groups=[
"hand",
]]
position = Vector2( 170, 1450 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightHand"]
visible = false
shape = SubResource( 2 )

[node name="leftHand" type="Area2D" parent="." groups=[
"hand",
]]
position = Vector2( 660, 1450 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftHand"]
visible = false
shape = SubResource( 3 )

[node name="bag" type="Area2D" parent="." groups=[
"bag",
]]
position = Vector2( 910, 1450 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bag"]
visible = false
shape = SubResource( 4 )

[node name="sellCard" type="Area2D" parent="." groups=[
"sellCard",
]]
position = Vector2( 921.386, 596.572 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sellCard"]
visible = false
shape = SubResource( 5 )
[connection signal="released" from="Draw" to="." method="_on_Draw_released"]
